--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello, welcome to jadonm.com :)
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+        <link rel="stylesheet" href="index.css" />
+        
+        <title>jadon mensah</title>
+</head>
+
+<html>
+<body>
+        <script src="lightdark.js"></script>
+        <h1 id="heading">jadon mensah</h1> 
+        <h2 id="subheading">about</h2>
+            <p id="text">I am currently a student in the UK. Apart from my studies, I enjoy working on various coding and engineering projects, as well as making music.</p>
+            <button class="button-5" role="button" onclick="lightDark()">cool gradient button</button>
+</body>
+</html>
