--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="lightdark.js"></script>
         <h1 id="heading">jadon mensah</h1> 
         <h2 id="subheading">about</h2>
-            <p id="text">I am currently a student in the UK. Apart from my studies, I enjoy working on various coding and engineering projects, as well as making music.</p>
+            <p id="text">I am currently a student in the UK. Apart from my studies, I enjoy programming, making things, and writing music.</p>
             <button class="button-5" role="button" onclick="lightDark()">cool gradient button</button>
 </body>
 </html>
