--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
         <link rel="stylesheet" href="index.css" />
         
-        <title>jadon mensah</title>
+        <title>Jadon Mensah</title>
 </head>
 
 <html>
 <body>
-        <script src="lightdark.js"></script>
-        <h1 id="heading">jadon mensah</h1> 
-        <h2 id="subheading">about</h2>
-            <p id="text">I am currently a student in the UK. Apart from my studies, I enjoy programming, making things, and writing music.</p>
-            <button class="button-5" role="button" onclick="lightDark()">cool gradient button</button>
+        <!--><script src="lightdark.js"></script></!-->
+        <h1 id="heading">Jadon Mensah</h1> 
+        <h2 id="subheading">About</h2>
+            <p id="text">I'm a student, currently studying for A-Levels in Maths, Further Maths, Computer Science and Physics.</p>
+            <p id="text">Apart from my studies, I enjoy programming, building circuits, and writing music.</p>
+            <p id="text">Take a look at my <a href="https://github.com/jadonmensah">Github</a> if you'd like.</p>
+            <!--><button class="button-5" role="button" onclick="lightDark()">cool gradient button</button></!-->
 </body>
 </html>
