--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
         <h1 id="heading">Jadon Mensah</h1> 
         <h2 id="subheading">About</h2>
-            <p id="text">I'm a student, currently studying for A-Levels in Maths, Further Maths, Computer Science and Physics.</p>
-            <p id="text">Apart from my studies, I enjoy programming, building circuits, and writing music.</p>
+            <p id="text">I'm an undergraduate Engineering student.</p>
+            <p id="text">Apart from my studies, I enjoy programming, and writing and producing music.</p>
             <p id="text">Take a look at my <a href="https://github.com/jadonmensah">Github</a> if you'd like.</p>
 
 </body>
