link to statpack

--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
 </header>
 <h1 id="about-me">about me</h1>
 <p>Hello! My name is Jadon. I’m an undergraduate engineering student at
-the University of Cambridge. This website is for documenting stuff I’m
-making, and writing about whatever topic interests me.</p>
+the University of Cambridge. This website is for documenting stuff I’ve
+made, and writing about whatever topic interests me.</p>
+<h1 id="updates">updates</h1>
+<p>11/12/24: <a
+href="https://statpack.jadonm.com/">statpack.jadonm.com</a> now hosts my
+A-Level CS project. It’s a statistics calculator/spreadsheet web
+app.</p>
 <h1 id="contact-and-links">contact and links</h1>
 <p>Email: my initials, followed by the digits two-six-seven-five, at
 cam.ac.uk<br />
