link to ceres on homepage

--- a/index.html
+++ b/index.html
@@ -177,10 +177,11 @@
 the University of Cambridge. This website is for documenting stuff I’ve
 made, and writing about whatever topic interests me.</p>
 <h1 id="updates">updates</h1>
-<p>11/12/24: <a
-href="https://statpack.jadonm.com/">statpack.jadonm.com</a> now hosts my
-A-Level CS project. It’s a statistics calculator/spreadsheet web
-app.</p>
+<p>02/02/25: <a href="https://jadonm.com/posts/ceres.html">ceres</a> - a
+new game that I am working on.<br />
+11/12/24: <a href="https://statpack.jadonm.com/">statpack.jadonm.com</a>
+now hosts my A-Level CS project. It’s a statistics
+calculator/spreadsheet web app.</p>
 <h1 id="contact-and-links">contact and links</h1>
 <p>Email: my initials, followed by the digits two-six-seven-five, at
 cam.ac.uk<br />
