--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ calculator/spreadsheet web app.</p>
 cam.ac.uk<br />
 LinkedIn: <a
 href="https://www.linkedin.com/in/jadonmensah/">linkedin.com/in/jadonmensah/</a><br />
-X/Twitter: <a href="https://x.com/kekuleanknot">Jadon Mensah
+X/Twitter: <a href="https://x.com/miscv32">Jadon Mensah
 (@kekuleanknot)</a></p>
 <h1 id="postscript">postscript</h1>
 <p>The source files for this website are available on <a
