--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ cam.ac.uk<br />
 LinkedIn: <a
 href="https://www.linkedin.com/in/jadonmensah/">linkedin.com/in/jadonmensah/</a><br />
 X/Twitter: <a href="https://x.com/miscv32">Jadon Mensah
-(@kekuleanknot)</a></p>
+(@miscv32)</a></p>
 <h1 id="postscript">postscript</h1>
 <p>The source files for this website are available on <a
 href="https://github.com/jadonmensah/jadonm.com/">my GitHub</a>.</p>
