--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ calculator/spreadsheet web app.</p>
 <p>Email: my initials, followed by the digits two-six-seven-five, at
 cam.ac.uk<br />
 LinkedIn: <a
-href="https://www.linkedin.com/in/jadonmensah/">linkedin.com/in/jadonmensah/</a><br />
+href="https://www.linkedin.com/in/jadonm/">linkedin.com/in/jadonm/</a><br />
 X/Twitter: <a href="https://x.com/miscv32">Jadon Mensah
 (@miscv32)</a></p>
 <h1 id="postscript">postscript</h1>
