add iris shader

--- a/gallery.html
+++ b/gallery.html
@@ -139,6 +139,7 @@
         // List of shader files in the shaders directory
         const shaderFiles = [
             'vortex.glsl',
+            "iris.glsl",
             'circle.glsl',
             'agar.glsl'
         ];
