new shader - grid

--- a/shader.html
+++ b/shader.html
@@ -265,6 +265,7 @@ geekest: geeker mode + 'void main(){}' can be omitted, 'gl_FragCoord' can be des
                     "iris.glsl":  7,
                     "circle.glsl":  7,
                     "agar.glsl":  7,
+                    "grid.glsl": 4,
             };
             
             // Get URL parameters
